# toolbox

./: .gitignore  Linear_Algebra.ipynb  README.md  Sierpinski.ipynb  pyproject.toml
.github/workflows/: test.yml
mathematics/: ADD.md
mathematics/core/: .node.py.swp  .test.py.swp  BinOps.py  Core.py  Utils.py  base.py  core.py  node.py  operators.py  test.py  tests.py
mathematics/drafts/: main.py
mathematics/fun/: sierpinski_triangle.py
mathematics/lims/: function.py
mathematics/linear-algebra/: matrices.py
mathematics/linear_algebra/: MatOPS.py  matrices.py  vectors.py
mathematics/probability/: distributions.cpp
src/toolbox.egg-info/: PKG-INFO  SOURCES.txt
src/toolbox/mathematics/: Sierpinski.ipynb
src/toolbox/mathematics/core/: .gitignore  .test.py.swp  CORE.md  core.py  tests.py
src/toolbox/mathematics/fun/: sierpinski_triangle.py
src/toolbox/mathematics/linear_algebra/: MatOPS.py  matrices.py  vectors.py
src/toolbox/mathematics/probability/: distributions.cpp  probability.h
src/toolbox/notebooks/: Sierpinski.ipynb
src/toolbox/testing/: TESTING.md  rough.py
src/toolbox/testing/testcases/: main.py  test_adjoint.py  test_det.py  test_matmul.py  test_transpose.py
testing/: rough.py
testing/testcases/: MatOPS_T.py  MatOPS_det.py  test_MatOPS_T.py  test_MatOPS_adj.py  test_MatOPS_det.py  test_MatOPS_matmul.py  test_adjoint.py  test_det.py  test_matmul.py  test_transpose.py
